--- a/JM/JM/JM.csproj
+++ b/JM/JM/JM.csproj
@@ -87,6 +87,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Ingridient.cs" />
+    <Compile Include="Juice.cs" />
     <Compile Include="JuiceMachine.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
